--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.0",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
