--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-JWT_SECRET=secret
-DATABASE=sushi_shop
-PASSWORD=postgres
-USERNAME=postgres
+HOST=3000
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_DATABASE=sushi_shop
